<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.latihanujikompaket2.ui.AdminHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.latihanujikompaket2.ui.history.HistoryFragment"
        android:label="@string/text_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_entry"
        android:name="com.example.latihanujikompaket2.ui.entrydata.EntryDataFragment"
        android:label="@string/text_entry_data"
        tools:layout="@layout/fragment_entry_data" />
</navigation>
