<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/petugas_mobile_navigation"
    app:startDestination="@+id/navigation_history_petugas">

        <fragment
            android:id="@+id/navigation_history_petugas"
            android:name="com.example.latihanujikompaket2.ui.history.HistoryFragment"
            android:label="@string/text_history"
            tools:layout="@layout/fragment_history" />

        <fragment
            android:id="@+id/navigation_entry_petugas"
            android:name="com.example.latihanujikompaket2.ui.entrydata.EntryDataFragment"
            android:label="@string/text_entry_data"
            tools:layout="@layout/fragment_entry_data" />

        <fragment
            android:id="@+id/navigation_profile_petugas"
            android:name="com.example.latihanujikompaket2.ui.mainpetugas.profile.ProfilePetugasFragment"
            android:label="@string/text_menu_profile"
            tools:layout="@layout/fragment_profile_petugas" />

</navigation>