<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/tv_nama_user"
        style="@style/textStyleRedMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_hello_admin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_pilih_tahun"
        android:layout_width="142dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_pilih_tahun"
        android:background="@drawable/bg_button_login"
        android:fontFamily="@font/helveticaneue_bold"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_nama_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_user"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:textSize="15sp"
        android:id="@+id/tv_tahun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_tahun_history"
        android:fontFamily="@font/helveticaneue_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_pilih_tahun"
        app:layout_constraintTop_toBottomOf="@+id/btn_pilih_tahun" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:background="#FAFAFA"
        android:id="@+id/rv_history_spp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="24dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="45dp"
        tools:listitem="@layout/item_list_history_spp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tahun" />



    <ProgressBar
        android:id="@+id/pg_history"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>